--- a/Runtime/MoShan.MoShanUnityToolkit.asmdef
+++ b/Runtime/MoShan.MoShanUnityToolkit.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "MoShan.MoShanUnityToolkit",
-    "rootNamespace": "MoShan.Unity",
+    "rootNamespace": "MoShan.Unity.EngineExpand",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
